--- a/NEWS
+++ b/NEWS
@@ -29,6 +29,8 @@ MD5 and HMAC-MD5 is needed, making a dependence on libgcrypt overkill.
 
 ** Listing supported server mechanisms with gsasl_server_mechlist work.
 
+** Autoconf 2.59, Automake 1.8 beta, Libtool CVS used.
+
 ** API and ABI modifications.
 gsasl_randomize: ADD.
 gsasl_md5: ADD.
