--- a/NEWS
+++ b/NEWS
@@ -63,9 +63,10 @@ gsasl_server_application_data_get: DEPRECATED: use gsasl_appinfo_get instead.
 gsasl_server_application_data_set: DEPRECATED: use gsasl_appinfo_set instead.
 
 GSASL_CRYPTO_ERROR: ADD, replaces deprecated GSASL_LIBGCRYPT_ERROR.
-GSASL_LIBGCRYPT_ERROR: DEPRECATED.  Will be removed in the future.
+GSASL_LIBGCRYPT_ERROR: DEPRECATED: use GSASL_CRYPTO_ERROR instead.
+
 GSASL_KERBEROS_V5_INTERNAL_ERROR: ADD, replaces deprecated GSASL_SHISHI_ERROR.
-GSASL_SHISHI_ERROR: DEPRECATED.  Will be removed in the future.
+GSASL_SHISHI_ERROR: DEPRECATED: use GSASL_KERBEROS_V5_INTERNAL_ERROR instead.
 
 * Changes in 0.0.8 (released 2003-10-11)
 
