--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ See the end for copying conditions.
 The 0.1.x branch will be started after this release.  Only necessary
 bugfix releases will be made for the 0.0.x branch.  The goals with
 0.1.x is to clean up the API, especially regarding callbacks.  Some of
-the cleanups (e.g., replacing gsasl_*_step_* with gsasl_step and
+the API cleanups (e.g., replacing gsasl_*_step_* with gsasl_step and
 gsasl_step64, the latter return heap allocated strings instead of
 using fixed size buffer from caller) are initiated in this release,
 but the old API entry points are still valid (and the self-test suite
