--- a/NEWS
+++ b/NEWS
@@ -73,6 +73,8 @@ GSASL_LIBGCRYPT_ERROR: DEPRECATED: use GSASL_CRYPTO_ERROR instead.
 GSASL_KERBEROS_V5_INTERNAL_ERROR: ADD, replaces deprecated GSASL_SHISHI_ERROR.
 GSASL_SHISHI_ERROR: DEPRECATED: use GSASL_KERBEROS_V5_INTERNAL_ERROR instead.
 
+GSASL_INVALID_HANDLE: ADD.
+
 * Changes in 0.0.8 (released 2003-10-11)
 
 ** Improved GSSAPI implementation detection.
