--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -738,7 +738,7 @@ tests.
 If your audience is a typical GNU/Linux desktop, you can often assume
 they have the @samp{pkg-config} tool installed, in which you can use
 its Autoconf M4 macro to find and set up your package for use with
-Shishi.  The following illustrate this scenario.
+Libgsasl.  The following illustrate this scenario.
 
 @example
 AC_ARG_ENABLE(gsasl,
@@ -763,9 +763,9 @@ AC_MSG_RESULT($gsasl)
 @subsection Standalone Autoconf test using Libtool
 
 If your package uses Libtool(@pxref{top, GNU Libtool,, libtool}), you
-can use the normal Autoconf tests to find the Shishi library and rely
-on the Libtool dependency tracking to include the proper dependency
-libraries (e.g., Libidn).  The following illustrate this scenario.
+can use the normal Autoconf tests to find Libgsasl and rely on the
+Libtool dependency tracking to include the proper dependency libraries
+(e.g., Libidn).  The following illustrate this scenario.
 
 @example
 AC_CHECK_HEADER(gsasl.h,
