--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -21,15 +21,12 @@ Copyright @copyright{} 2002, 2003 Simon Josefsson.
 @quotation
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.1 or
-any later version published by the Free Software Foundation; with no
-Invariant Sections, with the Front-Cover Texts being ``A GNU Manual,''
-and with the Back-Cover Texts as in (a) below.  A copy of the
-license is included in the section entitled ``GNU Free Documentation
-License.''
-
-(a) The FSF's Back-Cover Text is: ``You have freedom to copy and modify
-this GNU Manual, like GNU software.  Copies published by the Free
-Software Foundation raise funds for GNU development.''
+any later version published by the Free Software Foundation; with the
+Invariant Sections being "Commercial Support", the Front-Cover texts
+being ``A GNU Manual'', and with the Back-Cover Texts being ``You have
+freedom to copy and modify this GNU Manual, like GNU software''.  A
+copy of the license is included in the section entitled "GNU Free
+Documentation License".
 @end quotation
 @end copying
 
