--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
 Copyright (C) 2002, 2003 Simon Josefsson
 See the end for copying conditions.
 
-* Changes in 0.0.9 (unreleased)
+* Changes in 0.0.9 (released 2003-11-21)
 
 ** Command line client can talk to SMTP servers with --smtp.
 
