--- a/THANKS
+++ b/THANKS
@@ -12,6 +12,7 @@ Bug reports, patches and/or suggestions were also received from:
 Lars Engebretsen
 Marc Mutz
 Andorz Nilsson
+Wojciech Polak
 Sergey Poznyakoff
 Peter Prohaska
 
