--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ See the end for copying conditions.
 
 ** The CRAM-MD5 server now reject invalid passwords.
 The logic flaw was introduced in 0.0.9, after blindly making code
-changes to shut up valgrind.
+changes to shut up valgrind just before the release.
 
 ** Various build improvements.
 Pkg-config is no longer needed.  GTK-DOC is only used if present.
