--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ See the end for copying conditions.
 Earlier it assumed two lines were sent in one packet in one place, and
 sent as two packets in another place.
 
+** Various bugfixes.
+
 * Changes in 0.0.11 (released 2004-01-06)
 
 ** The client part of CRAM-MD5 now uses SASLprep instead of NFKC.
