--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
+* Changes in 0.0.13 (unreleased)
+
 * Changes in 0.0.12 (released 2004-01-15)
 
 ** Protocol line parser in 'gsasl' tool more reliable.
