--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -113,6 +113,13 @@ GNU SASL is developed for the GNU/Linux system, but runs on over 20
 platforms including most major Unix platforms and Windows, and many
 kind of devices including iPAQ handhelds and S/390 mainframes.
 
+GNU SASL is written in pure ANSI C89 to be portable to embedded and
+otherwise limited platforms.  The entire library, with full support
+for ANONYMOUS, EXTERNAL, PLAIN, LOGIN and CRAM-MD5, and the front-end
+that support client and server mode, and the IMAP and SMTP protocols,
+fits in under 60kb on an Intel x86 platform, without any modifications
+to the code.  (This figure was accurate as of version 0.0.13.)
+
 GNU SASL is licensed under the GNU General Public License.
 
 @menu
