--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -106,8 +106,7 @@ The library is easily ported because it does not do network
 communication by itself, but rather leaves it up to the calling
 application.  The library is flexible with regards to the
 authorization infrastructure used, as it utilizes callbacks into the
-application to decide whether a user is authorized or not.  GNU SASL
-has been ported to many Unix flavors.
+application to decide whether a user is authorized or not.
 
 GNU SASL is developed for the GNU/Linux system, but runs on over 20
 platforms including most major Unix platforms and Windows, and many
