--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -100,7 +100,7 @@ GNU SASL contains of a library (`libgsasl'), a command line utility
 library includes support for the framework (with authentication
 functions and application data privacy and integrity functions) and at
 least partial support for the CRAM-MD5, EXTERNAL, GSSAPI, ANONYMOUS,
-PLAIN, SECURID, DIGEST-MD5, LOGIN, NTLM mechanisms.
+PLAIN, SECURID, DIGEST-MD5, LOGIN, and NTLM mechanisms.
 
 The library is easily ported because it does not do network
 communication by itself, but rather leaves it up to the calling
