--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ Each backend is built into its own library (e.g., libgsasl-plain.so),
 to facilitate future possible use of dlopen to dynamically load
 backends.
 
+** Moved compatibility files (getopt*) to gl/, and added more (strdup*).
+
 * Changes in 0.0.13 (released 2004-01-17)
 
 ** Nettle (the crypto functionality, crypto/) has been updated.
