--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -19,13 +19,11 @@ Copyright @copyright{} 2002, 2003, 2004 Simon Josefsson.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.1 or
+under the terms of the GNU Free Documentation License, Version 1.2 or
 any later version published by the Free Software Foundation; with the
-Invariant Sections being "Commercial Support", the Front-Cover texts
-being ``A GNU Manual'', and with the Back-Cover Texts being ``You have
-freedom to copy and modify this GNU Manual, like GNU software''.  A
-copy of the license is included in the section entitled "GNU Free
-Documentation License".
+Invariant Sections being "Commercial Support", no Front-Cover Texts,
+and no Back-Cover Texts.  A copy of the license is included in the
+file COPYING.DOC.
 @end quotation
 @end copying
 
